--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
     </head>
     <body>
         <div class="header">
-            <button>Gmail</button>
-            <button>이미지</button>
-            <button><img class="head_img" width="20px" src="/img/app.png" alt="app_icon"></button>
-            <button><img class="head_img" width="20px" src="/img/acount.png" alt="acount_icon"></button>
+            <p>Gmail</p>
+            <p>이미지</p>
+            <img class="head_img" title="Googo 앱" src="/img/app.png" alt="app_icon">
+            <img class="head_img" title="Googo 계정" src="/img/acount.png" alt="acount_icon">
         </div>
 
         <div class="main_img">
@@ -18,23 +18,21 @@
         </div>
 
         <div class="main_content">
-            <img class="search_img" width="20px" src="/img/search.jpg" alt="search_icon">
-            <input>
-            <img class="search_img" width="20px" src="/img/mic.jpg" alt="mic_icon">
+            <div class="search_div">
+                <img class="search_img" src="/img/search.jpg" alt="search_icon">
+                <input placeholder=" Googo 검색 또는 URL 입력">
+                <img class="search_img" title="음성 검색" src="/img/mic.jpg" alt="mic_icon">
+            </div>
         </div>
 
         <div class="main_button">
-            <button>바로가기</button>
-            <button>바로가기</button>
-            <button>바로가기</button>
-            <button>바로가기</button>
-            <button>바로가기</button>
-            <button>바로가기</button>
-            <button>바로가기</button>
-            <button>바로가기</button>
+            <div title="바로가기 추가"><p>바로가기 추가</p></div>
         </div>
         <div class="footer">
-            <button>chrome 맞춤설정</button>
+            <div class="setting">
+                <img class="foot_img" src="/img/setting.jpg" alt="app_icon">
+                <p title="페이지 맞춤설정">chrome 맞춤설정</p>
+            </div>
         </div>
     </body>
 </html>
