change index page

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <div class="header">
-            <p>Gmail</p>
-            <p>이미지</p>
+            <p><a href="/src/mail.html">Mail</a></p>
+            <p><a href="/src/mail.html">이미지</a></p>
             <img class="head_img" title="Googo 앱" src="/img/app.png" alt="app_icon">
             <img class="head_img" title="Googo 계정" src="/img/acount.png" alt="acount_icon">
         </div>
@@ -26,7 +26,10 @@
         </div>
 
         <div class="main_button">
-            <div title="바로가기 추가"><p>바로가기 추가</p></div>
+            <div title="바로가기 추가">
+                <img class="foot_img" src="/img/plus_button.png" alt="app_icon">
+                <p>바로가기 추가</p>
+            </div>
         </div>
         <div class="footer">
             <div class="setting">
